<resources>
    <string name="app_titel">   Hans Arndt GmbH</string>
    <string name="title_activity_katalog">   Katalogübersicht</string>
    <string name="title_activity_sucherg">   Artikelauswahl</string>
    <string name="title_activity_artikel">   Artikeldetails</string>
    <string name="title_activity_search">   Artikelsuche</string>
    <string name="title_activity_maps">   </string>
    <string name="title_activity_einstellungen">   Benutzer Einstellungen</string>

    <string name="app_name">   Hans Arndt GmbH</string>
    <string name="artikel">Einzelansicht Artikel</string>
    <string name="map">Hier sind wir </string>
    <string name="sucherg">Das Ergebnis ihrer Suche</string>
    <string name="suchen">Artikel suchen</string>
    <string name="einstellung">Einstellungen</string>

    <string name="login">Kundenlogin</string>
    <string name="kontakt">Kontakt</string>
    <string name="katalog">Unsere Artikel</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="k01">Sechskant-Winkelschraubendreher</string>
    <string name="k02">Sechskant-Winkelschraubendreher, lange Ausführung</string>
    <string name="k03">Sechskant-Schraubendreher mit Griff</string>
    <string name="k04">Kugelkopf-Schraubendreher</string>
    <string name="k05">Schraubendreher für Innen-TX-Schrauben</string>
    <string name="k06">Schraubendreher für Vielzahn- und Ribe-Schrauben</string>
    <string name="k07">Bits</string>
    <string name="k08">Bit-Halter und -Sätze</string>
    <string name="k09">Schraubenschlüssel / Schraubendreher</string>
    <string name="k10">Kästen und Schraubenschlüssel</string>
    <string name="kneu">Neuheiten 2019</string>
    <string name="kaktion">Aktuelle Monatsaktion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Hans Anrdt GmbH</string>
    <string name="nav_header_subtitle">info@arndt-tool.de</string>
    <string name="nav_header_desc">Navigation</string>

    <string name="action_settings">Settings</string>

    <string name="json">http://www.arndt-tool.de/app/php/json.php</string>
    <string name="imageWeb">http://www.arndt-tool.de/app/img/</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Kundennummer</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Diese Kundennummer ist nicht bekannt</string>
    <string name="error_incorrect_password">Das Password ist falsch.</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB7D-sK2DlZbeZQAmKwoNBR1TSuXUfkxOA</string>

    <string-array name="synch">
        <item>Nie</item>
        <item>Bei jedem Start</item>
        <item>Bei jeder Suche</item>
        <item>Bei jedem Artikelaufruf</item>
        <item>Bei jeder neuen Suche</item>
        <item>Bei Aufruf eines neuen Artikels</item>
    </string-array>

    <!--Arrays für die Suche-->
    <string-array name="masseinheit">
        <item>inch/mm</item>
        <item>nur inch</item>
        <item>nur mm</item>
    </string-array>

    <string-array name="art">
        <item>alles</item>
        <item>Schlüssel</item>
        <item>Schraubendreher</item>
        <item>Bits</item>
    </string-array>

    <string-array name="ausfuehrung">
        <item>alle</item>
        <item>DIN 911 / DIN ISO 2936</item>
        <item>Chrom-Vanadium</item>
        <item>Werkzeugstahl</item>
        <item>verchromt</item>
        <item>schwarz</item>
        <item>vernickelt</item>
        <item>lange Ausführung</item>
        <item>brüniert</item>
        <item>flexibel</item>
        <item>PP-Griff</item>
        <item>magnetisch</item>
        <item>nichtr magnetisch</item>
    </string-array>

</resources>
